test/classes/jplevyak/record_type_hierarchy-3-error.good
record_type_hierarchy-3-error.chpl:1: In function '__init_record_type_hierarchy-3-error':
record_type_hierarchy-3-error.chpl:16: error: Unresolved call 'f(:C)'
record_type_hierarchy-3-error.chpl:10: note: candidates are: f(a: D)
